--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 					<div class="p-6">
 						<h3 class="text-2xl font-bold mb-4">Strange Horizons - Outerstellar</h3>
 						<p class="mb-2"><strong>Duration:</strong> 4 Years (2020-2024)</p>
-						<p class="mb-4">Helped concept and create the fundamental systems needed for a multiplayer survival game.</p>
+						<p class="mb-4">Helped concept and create the fundamental systems needed for a multiplayer survival game together with another engineer.</p>
 						<ul class="list-disc pl-6 mb-4 space-y-2">
 							<li>Development of optimized networked game systems for key gameplay features like Inventory, Deployables, Interaction, Abilities (GAS), Melee Combat, Animation and more</li>
 							<li>Led the design and implementation of the whole game's User Interface</li>
@@ -100,7 +100,7 @@
 						<ul class="list-disc pl-6 mb-4 space-y-2">
 							<li>Implemented networking using GameSparks Services</li>
 							<li>Developed the hexagon grid system</li>
-							<li>Created modular unit programming for gameplay variety</li>
+							<li>Created modular unit programming framwork for gameplay variety</li>
 						</ul>
 						<p class="mb-2"><strong>Technologies:</strong> Unity, C#, GameSparks</p>
 					</div>
@@ -120,7 +120,7 @@
 						<ul class="list-disc pl-6 mb-4 space-y-2">
 							<li>Developed a complex character controller with various parkour moves</li>
 							<li>Implemented a dynamic camera system</li>
-							<li>Setup state machine animation system for smooth character movement</li>
+							<li>Setup state machine based animation system for smooth character movement</li>
 						</ul>
 						<p class="mb-2"><strong>Technologies:</strong> Unity, C#</p>
 					</div>
