--- a/index.html
+++ b/index.html
@@ -132,36 +132,63 @@
         </ul>
         
 		
-			<h3 class="text-2xl font-bold mb-4">Soft Skills</h3>
-			
-			<div class="mb-6">
-				<h4 class="text-xl font-semibold mb-2">Leadership &amp; Collaboration</h4>
-				<ul class="list-disc pl-6">
-				<li class="mb-2"><span class="font-semibold">Project Management:</span> Led design and implementation of features, coordinating multiple team members effectively.</li>
-				<li class="mb-2"><span class="font-semibold">Team Player:</span> Known to use my sense of humor to foster a positive team environment and keep spirits high.</li>
-				<li class="mb-2"><span class="font-semibold">Clear Communicator:</span> Able to break down complex systems for non-technical team members, making collaboration smoother.</li>
-				</ul>
-			</div>
-			
-			<div class="mb-6">
-				<h4 class="text-xl font-semibold mb-2">Problem-Solving</h4>
-				<ul class="list-disc pl-6">
-				<li class="mb-2"><span class="font-semibold">Analytical Thinking:</span> Likes to approach complex problems by breaking them down to their core components.</li>
-				<li class="mb-2"><span class="font-semibold">Pragmatic Approach:</span> Not afraid to ditch the "textbook" solution when a more practical approach is needed.</li>
-				<li class="mb-2"><span class="font-semibold">Strong Attention to Detail:</span> Can dive deep into a single game mechanic, analyzing and comparing it with similar features in other games.</li>
-				</ul>
-			</div>
-			
-			<div>
-				<h4 class="text-xl font-semibold mb-2">Personal Qualities</h4>
-				<ul class="list-disc pl-6">
-				<li class="mb-2"><span class="font-semibold">Self-Managing:</span> Always able to proactively identify areas for improvement in game systems.</li>
-				<li class="mb-2"><span class="font-semibold">Curious:</span> Love diving deep into new systems and technologies, especially when it can benefit our current project.</li>
-				<li class="mb-2"><span class="font-semibold">Empathic and Caring:</span> Strive to create a welcoming environment where everyone on the team feels valued and heard.</li>
-				</ul>
-			</div>
+		<h3 class="text-2xl font-bold mb-4">Soft Skills</h3>
 		
+		
+        <div class="mb-6">
+            <h4 class="text-xl font-semibold mb-2">Leadership & Collaboration</h4>
+            <ul class="list-none">
+                <li class="flex items-start mb-2">
+                    <span class="w-3 h-3 bg-blue-500 rounded-full mr-2 mt-2"></span>
+                    <span><strong>Project Management:</strong> Led design and implementation of features, coordinating multiple team members effectively.</span>
+                </li>
+                <li class="flex items-start mb-2">
+                    <span class="w-3 h-3 bg-blue-500 rounded-full mr-2 mt-2"></span>
+                    <span><strong>Team Player:</strong> Known to use my sense of humor to foster a positive team environment and keep spirits high.</span>
+                </li>
+                <li class="flex items-start mb-2">
+                    <span class="w-3 h-3 bg-blue-500 rounded-full mr-2 mt-2"></span>
+                    <span><strong>Clear Communicator:</strong> Able to break down complex systems for non-technical team members, making collaboration smoother.</span>
+                </li>
+            </ul>
+        </div>
+
+        <div class="mb-6">
+            <h4 class="text-xl font-semibold mb-2">Problem-Solving</h4>
+            <ul class="list-none">
+                <li class="flex items-start mb-2">
+                    <span class="w-3 h-3 bg-blue-500 rounded-full mr-2 mt-2"></span>
+                    <span><strong>Analytical Thinking:</strong> Likes to approach complex problems by breaking them down to their core components.</span>
+                </li>
+                <li class="flex items-start mb-2">
+                    <span class="w-3 h-3 bg-blue-500 rounded-full mr-2 mt-2"></span>
+                    <span><strong>Pragmatic Approach:</strong> Not afraid to ditch the "textbook" solution when a more practical approach is needed.</span>
+                </li>
+                <li class="flex items-start mb-2">
+                    <span class="w-3 h-3 bg-blue-500 rounded-full mr-2 mt-2"></span>
+                    <span><strong>Strong Attention to Detail:</strong> Can dive deep into a single game mechanic, analyzing and comparing it with similar features in other games.</span>
+                </li>
+            </ul>
+        </div>
+
+        <div>
+            <h4 class="text-xl font-semibold mb-2">Personal Qualities</h4>
+            <ul class="list-none">
+                <li class="flex items-start mb-2">
+                    <span class="w-3 h-3 bg-blue-500 rounded-full mr-2 mt-2"></span>
+                    <span><strong>Self-Managing:</strong> Always able to proactively identify areas for improvement in game systems.</span>
+                </li>
+                <li class="flex items-start mb-2">
+                    <span class="w-3 h-3 bg-blue-500 rounded-full mr-2 mt-2"></span>
+                    <span><strong>Curious:</strong> Love diving deep into new systems and technologies, especially when it can benefit our current project.</span>
+                </li>
+                <li class="flex items-start mb-2">
+                    <span class="w-3 h-3 bg-blue-500 rounded-full mr-2 mt-2"></span>
+                    <span><strong>Empathic and Caring:</strong> Strive to create a welcoming environment where everyone on the team feels valued and heard.</span>
+                </li>
+            </ul>
+        </div>
 		
     </div>
 </section>
-			</main></body></html>
+</main></body></html>
